--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                     <h1>SAMPLE CODE</h1>
                     <p><code>
                         &lt;ol&gt;<br>
-                            &lt;li&gt;Профессия JavaScript<br>
+                            &lt;li&gt;Profession JavaScript<br>
                             &lt;ul&gt;<br>
                               &lt;li&gt;Frontend&lt;/li&gt;<br>
                               &lt;li&gt;Backend&lt;/li&gt;<br>
                             &lt;/ul&gt;<br>
                             &lt;/li&gt;<br>
-                            &lt;li&gt;Профессия PHP&lt;/li&gt;<br>
+                            &lt;li&gt;Profession PHP&lt;/li&gt;<br>
                           &lt;/ol&gt;<br>
                     </code></p>
 
